   * Split locate_motion into separate 'mode' and 'style' option to allow all
     possible combinations. (Joerg Weber)
   * Implement 'gapless' event mode to allow for recording of movies without 'holes'. (Joerg Weber)
   * Limit detection rate to 3fps at framerates above 5fps, to reduce CPU load. (Joerg Weber)

Bugfixes
   * Fix fd leaks in external pipe. (Angel Carpintero)

3.2.11 Summary of Changes

Features
   * Added support for ffmpeg-2008-04-09 port version of FreeBSD.
   * Remove mjpegtools dependencies and integrate only needed functions from library. (Angel Carpintero)
   * Allow change/setup framerate in FreeBSD using pwcbsd. (Angel Carpintero)
   * Get rid of ffmpeg-config in configure.in for debian. (Angel Carpintero)


Bugfixes
   * Fix Problem Encoding 1280x1024 resolution videos
     http://www.lavrsen.dk/twiki/bin/view/Motion/SupportQuestion2008x06x11x183727 (Angel Carpintero)
   * Add a new parameter netcam_tolerant_check, to be less strict with some buggy network cameras firmwares.
     http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2008x06x19x123218 (Angel Carpintero)
   * Fix round robin in BSD switching to METEOR_CAP_SINGLE. (Angel Carpintero)
   * Fix rotate for v4l2 devices using JPEG / MJPEG palettes. (Angel Carpintero)
   * Fix v4l2_palette http://www.lavrsen.dk/twiki/bin/view/Motion/UvcvideoMjpegPatch (Gerrit Hannaert)
   * Fix warning for x86_64 in conf.c using pointers LP64 compliant ( Angel Carpintero ).


3.2.10.1 Summary of Changes

Bugfixes
    * Fix a security issue in web control interface http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=484572
      (Angel Carpintero)

3.2.10 Summary of Changes

Features
   * Added the pre_capture buffer redesign to throttle load and enhance pre_capture feature.
     http://www.lavrsen.dk/twiki/bin/view/Motion/PreCaptureRedesign (Dag Erlandsson).
   * Added preview center feature.
     http://www.lavrsen.dk/twiki/bin/view/Motion/PreviewCenter (Dag Erlandsson).	